@@ -16,7 +16,7 @@
 
 <p><br>GXemul is a framework for full-system computer architecture emulation. 
 Several processor architectures and machine types have been implemented. 
-It is working well enough to allow <a href="doc/guestoses.html">unmodified
+It is working well enough to allow <a href="guestoses.html">unmodified
 "guest" operating systems to run inside the emulator</a>,
 as if they were running on real hardware.
 
@@ -26,18 +26,18 @@ surrounding hardware components such as framebuffers, busses, interrupt
 controllers, ethernet controllers, disk controllers, and serial port 
 controllers.
 
-<p>The <a href="doc/index.html">documentation</a> lists the machines and
+<p>The <a href="index.html">documentation</a> lists the machines and
 guest operating systems that 
 can be regarded as "working" in GXemul. The best working guest operating 
-systems are <a href="doc/guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>
-and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
+systems are <a href="guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>
+and <a href="guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 
 <p><br>The changes between release 0.4.7 and 0.5.0 are:
 
 <ul>
 
-  <li>TODO
+  <li>TODO: C++ redesign
 
   <p>
 
@@ -45,21 +45,20 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 </ul>
 
-<p>Please read the <a href="HISTORY">HISTORY</a> file for more details.
+<p>Please read the HISTORY file for more details.
 
 
 <p><br>Files included in this release are:<pre>
-    <a href="HISTORY">HISTORY</a>                       Detailed revision history / changelog.
-    <a href="LICENSE">LICENSE</a>                       Copyright message / license.
-    <a href="README">README</a>                        Quick start instructions, for the impatient.
-    RELEASE.html                  This file.
-    <a href="TODO">TODO</a>                          TODO notes.
-    configure, Makefile.skel      sh and make scripts for building GXemul.
-    <a href="demos/">demos/</a>                        Tutorial-like demos of testmachine functionality.
-    <a href="doc/">doc/</a>                          Documentation.
-    <a href="experiments/">experiments/</a>                  Experimental code. (Usually not needed.)
-    <a href="man/">man/</a>                          Man page.
-    <a href="src/">src/</a>                          Source code.
+    HISTORY                      Detailed revision history / changelog.
+    LICENSE                      Copyright message / license.
+    README                       Quick start instructions, for the impatient.
+    TODO                         TODO notes.
+    configure, Makefile.skel     sh and make scripts for building GXemul.
+    demos/                       Tutorial-like demos of testmachine functionality.
+    <a href="index.html">doc/</a>                         Documentation.
+    experiments/                 Experimental code. (Usually not needed.)
+    man/                         Man page.
+    src/                         Source code.
 </pre>
 
 <p>To build the emulator, run the <tt>configure</tt> script, and then run 
